k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finch-backend
  labels:
    app: finch-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: finch-backend
  template:
    metadata:
      labels:
        app: finch-backend
    spec:
      containers:
        - name: backend
          image: cryptic0053/finch-backend:latest
          ports:
            - containerPort: 8000
          command: ["/bin/bash", "-c"]
          args: ["source venv1/bin/activate && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
