k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finch-backend
spec:
  type: NodePort
  selector:
    app: finch-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30007
