k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finch-frontend
spec:
  type: ClusterIP
  selector:
    app: finch-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
